# pWASM

./: .gitmodules  CMakeLists.txt  COPYING  README.md
CMakeModules/: FindWasm.cmake  wasm.cmake
hello/: CMakeLists.txt  hello.cpp
libc/: CMakeLists.txt
libc++/: CMakeLists.txt
libc++/libcxx/include/: cmath  cstdio  cstdlib  ctime  math.h
libc/musl/include/: time.h
libc/musl/include/bits/: alltypes.h
libc/musl/src/stdio/: __stdio_write.c
libc/musl/src/time/: __tz.c  strftime.c
platonlib/: CMakeLists.txt
platonlib/include/platon/: RLP.h  assert.h  common.h  compiler_builtins.h  contract.hpp  datastream.h  deployedcontract.hpp  event.hpp  exception.h  fixedhash.hpp  platon.hpp  print.h  print.hpp  serialize.hpp  state.hpp  storage.hpp  storagetype.hpp  txencode.hpp  varint.hpp  vector_ref.h
platonlib/include/platon/db/: array.hpp  list.hpp  map.hpp
platonlib/src/: RLP.cpp
script/: autoproject.sh  runwasm.bat  runwast.bat
test/: CMakeLists.txt  log.h  state.h  unittest.hpp
test/testcase/: CMakeLists.txt  array.cpp  bigint.cpp  compiler_builtins.cpp  container.cpp  convert.cpp  datastream.cpp  deployedcontract.cpp  event.cpp  fixedhash.cpp  list.cpp  map.cpp  print.cpp  rlp.cpp  state.cpp  storagetype.cpp  unittest.cpp
user/: CMakeLists.txt
user/mpc/: CMakeLists.txt  mpc.cpp  template.cpp
